--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <title>消失的阿雯</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Lost in the Love!</title>
+    <style>
+      body {
+        background-color: #F5F5FF;
+      }
+      
+      h1 {
+        font-family: Bradley Hand ITC;
+        font-size: 20px;
+        font-weight: bold;
+        color: #FF1493;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+      }
+      
+      .background-image {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: -1;
+        width: 50%;
+      }
+    </style>
+  </head>
   <body>
-      <h1>消失的阿雯</h1>
+    <h1>消失的阿雯</h1>
+    <img src="https://celingo.github.io/pic.io/66.png" alt="background" class="background-image">
   </body>
 </html>
