--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
   </head>
   <body>
-    <h1>消失的阿雯</h1>
+    <h1>解锁新成就：\n消失的阿雯</h1>
     <img src="https://celingo.github.io/pic.io/66.png" alt="background" class="background-image">
   </body>
 </html>
