--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lost in the Love!</title>
+    <title>Lost In The Stars</title>
     <style>
       body {
         background-color: #F5F5FF;
