--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <h1>恭喜你解锁新成就：<br>
-      消失的阿雯</h1>
+      &nbsp;&nbsp;&nbsp;消失的阿雯</h1>
     <img src="https://celingo.github.io/pic.io/66.png" alt="background" class="background-image">
   </body>
 </html>
