--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </style>
   </head>
   <body>
-    <h1>恭喜你解锁新成就：<br>
-      &nbsp;&nbsp;&nbsp;消失的阿雯</h1>
+    <h1>恭喜你获得新成就：<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;消失的阿雯</h1>
     <img src="https://celingo.github.io/pic.io/66.png" alt="background" class="background-image">
   </body>
 </html>
