--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
         z-index: -1;
         width: 50%;
       }
+      .red-text {
+        color: #FF0000; /* 绯红色 */
+      }
     </style>
   </head>
   <body>
     <h1>恭喜你获得新成就：<br>
-      <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;消失的阿雯</h1>
+      <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="red-text">消失的阿雯</span></h1>
     <img src="https://celingo.github.io/pic.io/66.png" alt="background" class="background-image">
   </body>
 </html>
