--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             0% {
                 transform: translateX(0);
             }
+            50% {
+                transform: translateX(5px);
             100% {
-                transform: translateX(5px); /* 在X轴上平移文字 */
+                transform: translateX(0px); /* 在X轴上平移文字 */
             }
         }
     </style>
