--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Lost In The Stars</title>
     <style>
     body {
-        background-color: #800080; /* 紫色背景色 */
+        background-color: #FF0000; /* 紫色背景色 */
         animation: backgroundFlow 4s infinite alternate; /* 背景流动动画 */
       }
 
