--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Lost In The Stars</title>
     <style>
     body {
-        background-color: #FF0000; /* 血色背景色 */
+        background: linear-gradient(0deg, #FF000, #FF00FF, #FF000); /* 线性渐变背景 */
+        background-size: 200% 200%; /* 背景尺寸 */
         animation: backgroundFlow 4s infinite alternate; /* 背景流动动画 */
-      }
-
+     }
       @keyframes backgroundFlow {
         0% {
           background-position: 0% 0%;
