--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Lost In The Stars</title>
     <style>
     body {
-        background: linear-gradient(0deg, #FF000, #FF00FF, #FF000); /* 线性渐变背景 */
+        background: linear-gradient(0deg, #FF0000, #FF00FF, #FF0000); /* 线性渐变背景 */
         background-size: 200% 200%; /* 背景尺寸 */
         animation: backgroundFlow 4s infinite alternate; /* 背景流动动画 */
      }
@@ -20,7 +20,7 @@
       
       h1 {
         font-family: Bradley Hand ITC;
-        font-size: 20px;
+        font-size: 1.25rem;
         font-weight: bold;
         color: #FF1493;
         position: absolute;
