--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Lost In The Stars</title>
     <style>
+      :root {
+        font-size: 20px;
+      }
     body {
         background: linear-gradient(0deg, #FF0000, #FF00FF, #FF0000); /* 线性渐变背景 */
         background-size: 200% 200%; /* 背景尺寸 */
