--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         font-size: 20px;
       }
     body {
-        background: linear-gradient(0deg, #FF0000, #FF00FF, #FF0000); /* 线性渐变背景 */
+        background: linear-gradient(0deg, #000000, #FF00FF, #000000); /* 线性渐变背景 */
         background-size: 200% 200%; /* 背景尺寸 */
-        animation: backgroundFlow 4s infinite alternate; /* 背景流动动画 */
+        animation: backgroundFlow 1s infinite alternate; /* 背景流动动画 */
      }
       @keyframes backgroundFlow {
         0% {
