--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         font-size: 20px;
       }
     body {
-        background: linear-gradient(0deg, #FFFFFF, #FF00FF, #FFFFFF); /* 线性渐变背景 */
+        background: linear-gradient(0deg, #FFFFFF, #0000FF, #000000); /* 线性渐变背景 */
         background-size: 800% 800%; /* 背景尺寸 */
         animation: backgroundFlow 1s infinite alternate; /* 背景流动动画 */
      }
