--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         font-size: 20px;
       }
     body {
-        background: linear-gradient(0deg, #FFFFFF, #0000FF, #000000, #0000FF, #FFFFFF); /* 线性渐变背景 */
-        background-size: 800% 800%; /* 背景尺寸 */
+        background: linear-gradient(0deg, #FFFFFF, #0000FF, #000000, #0000FF, #FFFFFF, #FF0000, #000000, #0000FF, #FFFFFF); /* 线性渐变背景 */
+        background-size: 6400% 6400%; /* 背景尺寸 */
         animation: backgroundFlow 1s infinite alternate; /* 背景流动动画 */
      }
       @keyframes backgroundFlow {
