--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         font-size: 20px;
       }
     body {
-        background: linear-gradient(0deg, #FFFFFF, , #FFFFFF, #0000FF, #000000, #0000FF, #FFFFFF, #FFFFFF, #FFFFFF, #FF0000, #000000, #0000FF, #FFFFFF, #FFFFFF); /* 线性渐变背景 */
-        background-size: 6400% 6400%; /* 背景尺寸 */
+        background: repeating-linear-gradient(45deg, #FFFFFF,  #FFFFFF 25px, #0000FF 25px, #0000FF 50px); /* 线性渐变背景 */
+        background-size: 600% 600%; /* 背景尺寸 */
         animation: backgroundFlow 8s infinite alternate; /* 背景流动动画 */
      }
       @keyframes backgroundFlow {
