--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
       :root {
         font-size: 20px;
       }
-    body {
-        background: repeating-linear-gradient(90deg, #FFFFFF,  #FFFFFF 25px, #0000FF 25px, #0000FF 50px); /* 线性渐变背景 */
+   body {
+        background: repeating-linear-gradient(0deg, #FFFFFF, #FFFFFF 25px, #0000FF 25px, #0000FF 50px), repeating-linear-gradient(90deg, #FFFFFF, #FFFFFF 25px, #0000FF 25px, #0000FF 50px); /* 马赛克方格背景 */
+        background-size: 50px 50px; /* 方格大小 */
         animation: backgroundFlow 8s infinite alternate; /* 背景流动动画 */
-     }
+      }
       @keyframes backgroundFlow {
         0% {
           background-position: 0% 0%;
