--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
         background-size: 50px 50px; /* 方格大小 */
         animation: backgroundFlow 8s infinite alternate; /* 背景流动动画 */
       }
+      body::before {
+        content: ""; /* 添加伪元素内容 */
+        position: absolute; /* 设置绝对定位 */
+        top: 0;
+        left: 0;
+        width: 100%; /* 占满整个屏幕宽度 */
+        height: 100%; /* 占满整个屏幕高度 */
+        background: linear-gradient(90deg, #FFFFFF, #FFFFFF 25px, #0000FF 25px, #0000FF 50px); /* 垂直方格 */
+        background-size: 50px 50px; /* 方格大小 */
+        opacity: 0.5; /* 降低伪元素的透明度 */
+      }
       @keyframes backgroundFlow {
         0% {
           background-position: 0% 0%;
