--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         left: 0;
         width: 100%; /* 占满整个屏幕宽度 */
         height: 100%; /* 占满整个屏幕高度 */
-        background: linear-gradient(90deg, #FFFFFF, #FFFFFF 25px, #0000FF 25px, #0000FF 50px); /* 垂直方格 */
+        background: linear-gradient(90deg, #FFFFFF, #FFFFFF 25px, #808080 25px, #808080 50px); /* 垂直方格 */
         background-size: 50px 50px; /* 方格大小 */
         opacity: 0.5; /* 降低伪元素的透明度 */
         z-index: 1;
