--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </style>
   </head>
   <body>
-    <h1>恭喜你获得新成就：<br>
+    <h1>恭喜你获得新：<br>
       <br> <span class="red-text">消失的阿雯</span></h1>
     <img src="https://celingo.github.io/pic.io/66.png" alt="background" class="background-image">
   </body>
