--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         @keyframes blood {
             0% {
-                transform: translateX(0);
+                transform: translateX(0px);
             }
             50% {
                 transform: translateX(5px);
