--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         width: 50%;
       }
      .red-text {
-            background: linear-gradient(0deg, #FF0000, transparent, #000000); /* 渐变背景 */
+            background: linear-gradient(0deg, #FF0000, transparent, #FF0000); /* 渐变背景 */
             -webkit-background-clip: text; /* 使用文字作为背景剪切 */
             color: transparent; /* 隐藏文字颜色 */
             animation: blood 2s infinite alternate; /* 动画效果 */
