--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         width: 50%;
       }
      .red-text {
-            background: linear-gradient(0deg, #FF0000, transparent, #FF0000); 
-                        linear-gradient(20deg, #FF0000, transparent, #0000FF); /* 渐变背景 */
+            background: linear-gradient(0deg, #FF0000, transparent, #FF0000), 
+                        linear-gradient(45deg, #FF0000, transparent, #0000FF); /* 渐变背景 */
             -webkit-background-clip: text; /* 使用文字作为背景剪切 */
             color: transparent; /* 隐藏文字颜色 */
             animation: blood 6s infinite alternate; /* 动画效果 */
