--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         left: 0;
         width: 100%; /* 占满整个屏幕宽度 */
         height: 100%; /* 占满整个屏幕高度 */
-        background: linear-gradient(90deg, #FFFFFF, #FFFFFF 25px, #808080 25px, #808080 50px); /* 垂直方格 */
+        background: linear-gradient(90deg, #FFFFFF, #FFFFFF 25px, #64A88C 25px, #64A88C 50px); /* 垂直方格 */
         background-size: 50px 50px; /* 方格大小 */
         opacity: 0.5; /* 降低伪元素的透明度 */
         z-index: 1;
@@ -57,7 +57,7 @@
       }
      .red-text {
             background: linear-gradient(0deg, #FF0000, transparent, #FF0000), 
-                        linear-gradient(45deg, #FF0000, transparent, #64A88C),
+                        linear-gradient(45deg, #FF0000, transparent, #808080),
                         linear-gradient(65deg, #FF0000, transparent, #006065); /* 渐变背景 */
             -webkit-background-clip: text; /* 使用文字作为背景剪切 */
             color: transparent; /* 隐藏文字颜色 */
