--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         font-family: Bradley Hand ITC;
         font-size: 1.25rem;
         font-weight: bold;
-        color: #006065;
+        color: #81E8D5;
         position: absolute;
         top: 50%;
         left: 50%;
