--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        z-index: 3;
+        z-index: 4;
       }
       
       .background-image {
@@ -52,6 +52,14 @@
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 2;
+        width: 50%;
+      }
+      .background-image-2 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 3;
         width: 50%;
       }
      .red-text {
@@ -79,5 +87,6 @@
     <h1>恭喜你获得新成就：<br>
       <br> <span class="red-text">消失的阿雯</span></h1>
     <img src="https://ztandyw.github.io/pic2.io/img02.jpg" alt="background" class="background-image">
+    <img src="https://celingo.github.io/pic.io/66.png" alt="background" class="background-image-2">
   </body>
 </html>
