--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
   </head>
   <body>
     <h1>恭喜你获得新成就：<br>
-      <br> <span class="red-text">消失的阿雯</span></h1>
+      <br> <span class="red-text">消失的阿雯</span>
+      <br>I wish you happiness</h1>
+    
     <img src="https://ztandyw.github.io/pic.io/img06.jpg" alt="background" class="background-image">
     <img src="https://celingo.github.io/pic.io/66.png" alt="background" class="background-image-2">
   </body>
