--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <body>
     <h1>恭喜你获得新成就：<br>
       <br> <span class="red-text">消失的阿雯</span>
-      <br>I wish you happiness</h1>
+      <br><br>I wish you happiness</h1>
     
     <img src="https://ztandyw.github.io/pic.io/img06.jpg" alt="background" class="background-image">
     <img src="https://celingo.github.io/pic.io/66.png" alt="background" class="background-image-2">
