--- a/index.html
+++ b/index.html
@@ -102,11 +102,9 @@
     </style>
   </head>
   <body>
-    <h1>恭喜您获得新成就：
+    <h1>&nbsp&nbsp&nbsp获得新成就：
       <br><br> 
-      <span class="red-text">消失的阿雯</span>
-      <br><br>
-      <span class="gre-text">I wish you happiness</span>
+      <span class="red-text">&nbsp&nbsp&nbsp消失的阿雯 <br><br>&nbsp&nbsp&nbspI wish you happiness</span>
     </h1>
     
     <img src="https://ztandyw.github.io/pic.io/img06.jpg" alt="background" class="background-image">
