--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
   <body>
     <h1>&nbsp&nbsp&nbsp获得新成就：
       <br><br> 
-      <span class="red-text">&nbsp&nbsp&nbsp消失的阿雯 <br><br>&nbsp&nbsp&nbspI wish you happiness</span>
+      <span class="red-text">&nbsp&nbsp&nbsp消失的阿雯 </span>
+      <span class="red-text"><br><br>&nbsp&nbsp&nbspI wish you happiness</span>
     </h1>
     
     <img src="https://ztandyw.github.io/pic.io/img06.jpg" alt="background" class="background-image">
